--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "Ice": "APP_NAME=Ice node Client.js --reset-cache" 
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "ice": "^3.7.90",
+    "net": "^1.0.2",
     "react": "18.2.0",
+    "react-async": "^10.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-web": "~0.19.6",
-    "slice2js": "^3.7.90"
+    "slice2js": "^3.7.90",
+    "webpack": "^5.88.2"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
